Navigation widget: fixing un-clickable areas and alignment issues

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -108,13 +108,36 @@ pre { /* fixes code option in editor */
                 background-color: @color-swatch7;
             }
         }
+
+
+
+        .extendednavigation ul {
+            &.align-left, &.align-right, &.align-center {
+                float: none;
+            } 
+            &.align-right {
+                margin-right: 160px;
+                .folder > .text:after {
+                    right: auto;
+                    left: 0;
+                }
+                .folder > .text {
+                    
+                        padding-left: 25px;
+                        padding-right: 15px;
+                    
+                       
+                    }
+                
+            }
+        }
+
         li {
             ul {
                 display: none !important;
             }
         }
         ul {
-            max-width: 80%;
             padding: 0;
             @media @tablet {
                 /* Hidden until nav icon is clicked */
@@ -128,13 +151,12 @@ pre { /* fixes code option in editor */
             li {
                 white-space: nowrap;
                 display: inline-block;
-                padding: 5px 0;
                 margin: 7px 7px 0 0;
                 background-color: @color-swatch7;
                 @media @tablet {
                     width: 100%;
-                    padding: 15px 0;
                     margin: 0;
+                    padding: 0;
                     border-bottom: 1px dotted darken(@color-swatch7,10%);
                     background-color: lighten(@color-swatch7,10%);
                 }
@@ -178,21 +200,22 @@ pre { /* fixes code option in editor */
                 }
                 a {
                     display: block;
-                    padding: 0 15px;
                     font-family: @font-swatch6-font-family;
                     font-size: @font-swatch6-font-size;
                     font-weight: @font-swatch6-font-weight;
                     color: @font-swatch6-color;
                     line-height: @font-swatch6-line-height;
                     letter-spacing: @font-swatch6-letter-spacing;
-                    @media @tablet {
-                        padding: 0 5%;
-                    }
+                    padding: 0;
+                }
+
+                .text {
+                    display: block;
+                    padding: 5px 15px;
                 }
 
                 &.folder {
                     /* Folder dropdown arrow BG style goes Here */  
-                    padding-right: 1.5%;            
                     cursor: pointer;
                     &:hover {
                         .text {
@@ -209,9 +232,9 @@ pre { /* fixes code option in editor */
                             color: @font-swatch6-color-hover;
                         }
                     }
+
                     .text {
                         display: block;
-                        padding: 0 15px;
                         font-family: @font-swatch6-font-family;
                         font-size: @font-swatch6-font-size;
                         font-weight: @font-swatch6-font-weight;
@@ -219,30 +242,34 @@ pre { /* fixes code option in editor */
                         line-height: @font-swatch6-line-height;
                         letter-spacing: @font-swatch6-letter-spacing;
                         position: relative;
+                        padding-right: 25px;
                         &:after {
                             content: "\25BC";
                             font-size: 5px;
                             position: absolute;
-                            top: 1px;
+                            top: 50%;
+                            height: 8px;
+                            line-height: 8px;
+                            margin-top: -4px;
                             display: block;
                             z-index: 9999999;
                             right: 0;
+                            padding: 0 10px;
                             color: @color-swatch6;
                             @media @tablet {
                                 font-size: 10px;
-                                padding-right: 10px;
                             }
                         }
-                        @media @tablet {
-                            padding:0 5%;
-                        }
                     }
+
                     ul {
                         padding: 0;
+                        margin-top: 0;
                         @media @tablet {
-                            margin-top: 11px;
+                            margin-top: 0;
                         }
                         li {
+                            margin: 0;
                             &:last-child {
                                 @media @tablet {
                                     border-bottom: 1px dotted darken(@color-swatch7,10%);
@@ -250,7 +277,7 @@ pre { /* fixes code option in editor */
                             }
                             a {
                                 .text {
-                                    padding: 0;
+                                    padding-right: 15px;
                                     &:after {
                                         content: "";
                                     }
@@ -258,7 +285,6 @@ pre { /* fixes code option in editor */
                             }
                         }
                     }
-
                 }
             }
         }
@@ -269,25 +295,26 @@ pre { /* fixes code option in editor */
                @media @tablet {
                    display: block;
                    margin: 0;
-                   width: 20px;
+                   width: 100%;
                    height: 44px;
                    position: absolute;
-                   top: -3px;
-                   left: 48.5%;
+                   top: 0;
+                   left: 0;
                    &:hover {
                        cursor: pointer;
                    }
                    &:after {
                        content: '';
                        position: absolute;
-                       width: 100%;
+                       width: 20px;
                        height: 3px;
                        background: @color-swatch6;
-                       top: 15px;
-                       left: 0;
+                       top: 13px;
+                       left: 50%;
+                       margin-left: -10px;
                        box-shadow: 0 6px 0 @color-swatch6, 0 12px 0 @color-swatch6;
                    }
-               }
+                }
             }
         }
     }
